# camera-adapter

./: .gitattributes  .gitignore  ACCEPTANCE-MATRIX.md  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.dockerignore  IMPLEMENTATION_SPEC.md  LICENSE  NOTICE  README.md  SESSION_HANDOFF.md  config.schema.json  recipe.yaml
.github/workflows/: ci.yml
deploy/docker/: compose.yaml  simulator-config.json  simulator-onvif.json
docs/: README.md  acceptance-matrix.md  explanation.md  how-to-guides.md  perf-analysis.html  sample-configurations.md  tutorial.md
docs/deployment/: greengrass.md  host.md  kubernetes.md
docs/reference/: compatibility.md  configuration.md  data-types.md  messaging-interface.md  metrics.md
k8s/: configmap.yaml  deployment.yaml
native/aravis-scoped/: Cargo.toml  build.rs
native/aravis-scoped/src/: lib.rs
simulators/: README.md  capacity_validation.Dockerfile  compose.yaml  configure-toxiproxy.ps1  generate-tls-fixtures.ps1  generate-tls-fixtures.sh  image-lock.json  mediamtx.yml  native_all_validation.Dockerfile  rtsp_validation.Dockerfile  run-capacity-validation-container.sh  run-capacity-validation.sh  run-genicam-native-coverage.ps1  run-genicam-native-coverage.sh  run-native-all-validation.sh  run-rtsp-native-coverage.ps1  verify.ps1
simulators/aravis_fake/: AdapterValidation.Dockerfile  Dockerfile  README.md
simulators/onvif_sim/: Dockerfile  server.py  test_server.py
simulators/onvif_sim/fixtures/: default.json  hostile-uri.json  malformed-soap.json  tls.json  truncated-snapshot.json
simulators/two-box/: README.md  genicam-adapter.Dockerfile  run-genicam-l2.sh  run-rtsp-onvif-l2.sh
src/: actor.rs  admission.rs  catalog.rs  commands.rs  config.rs  credential_provider.rs  dispatch.rs  encoding.rs  error.rs  idempotency.rs  jobs.rs  lib.rs  main.rs  messages.rs  model.rs  observability.rs  outbox.rs  registry.rs  runtime.rs  scheduler.rs  state_path.rs  storage.rs  storage_pressure.rs  supervisor.rs  thumbnail.rs  windows_security.rs
src/backend/: genicam_aravis.rs  mod.rs  net.rs  onvif.rs  rtsp.rs  rtsp_backend.rs  sim.rs  ws_discovery.rs
src/runtime/: command.rs  reload.rs  schedule.rs  supervision.rs
src/runtime/tests/: mod.rs  simulator_runtime.rs
src/runtime/tests/simulator_runtime/: coverage_command.rs  coverage_reload.rs  coverage_supervision.rs
tests/: deployment_config.rs  docker_capture_submit.rs  panic_hook.rs
