[package]
name = "camera-adapter"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "EdgeCommons southbound adapter for GenICam and ONVIF cameras"
publish = false

[[bin]]
name = "camera-adapter"
path = "src/main.rs"

[[bin]]
name = "camera-adapter-genicam-discover"
path = "src/bin/genicam_discover.rs"
required-features = ["genicam"]

[features]
default = ["standalone", "onvif"]
standalone = ["edgecommons/standalone"]
greengrass = ["edgecommons/greengrass"]
onvif = [
    "dep:reqwest",
    "dep:quick-xml",
    "dep:network-interface",
    "dep:sha1",
    "dep:md-5",
    "dep:base64",
    "tokio/net",
]
genicam = ["dep:aravis", "dep:aravis-scoped"]
rtsp = [
    "onvif",
    "tokio/io-util",
    "tokio/net",
    "dep:gstreamer",
    "dep:gstreamer-app",
    "dep:rustls",
    "dep:rustls-native-certs",
    "dep:rustls-pemfile",
    "dep:tokio-rustls",
]
native-all = ["genicam", "rtsp"]
# Linux-only live-lab test plumbing. This is intentionally non-default so the
# short capacity workload is not compiled into ordinary `--lib` coverage.
capacity-harness = []

[dependencies]
edgecommons = { path = "../core/libs/rust", default-features = false, features = ["credentials"] }
anyhow = "1"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
chrono-tz = { version = "0.10", features = ["serde"] }
croner = "3"
fs4 = { version = "0.13", features = ["sync"] }
futures = "0.3"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff"] }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
unicode-general-category = "1"
uuid = { version = "1", features = ["serde", "v7"] }
url = { version = "2", features = ["serde"] }
ipnet = { version = "2", features = ["serde"] }
png = "0.18"
rustix = { version = "1.1", features = ["fs"] }
tiff = "0.10"
zeroize = "1"

reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream"], optional = true }
quick-xml = { version = "0.38", features = ["serialize"], optional = true }
network-interface = { version = "2.0.5", optional = true }
sha1 = { version = "0.10", optional = true }
md-5 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }

aravis = { version = "0.11.1", default-features = false, features = ["v0_8_25"], optional = true }
aravis-scoped = { path = "native/aravis-scoped", optional = true }
# These releases are constrained by the adapter's Rust 1.85 MSRV. The 0.25
# binding line requires Rust 1.92; this coherent 0.24 line declares Rust 1.83.
gstreamer = { version = "=0.24.4", optional = true }
gstreamer-app = { version = "=0.24.2", optional = true }
rustls = { version = "0.23", optional = true }
rustls-native-certs = { version = "0.8", optional = true }
rustls-pemfile = { version = "2", optional = true }
tokio-rustls = { version = "0.26", optional = true }

[dev-dependencies]
edgecommons = { path = "../core/libs/rust", default-features = false, features = ["credentials", "standalone"] }
proptest = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "test-util"] }

[target.'cfg(windows)'.dependencies]
known-folders = "=1.4.2"
cap-std = "=4.0.2"
cap-fs-ext = { version = "=4.0.2", features = ["std"] }
windows-permissions = "=0.2.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
correctness = "deny"
suspicious = "warn"
complexity = "warn"
perf = "warn"
